<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="2">
    <ImageView
        android:id="@id/iv"
        android:scaleType="center"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher"/>

<!--    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">-->
        <GridLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:descendantFocusability="afterDescendants"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:rowCount="5">
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accelerate_decelerate"
                android:onClick="setAccelerateDecelerate"
                />

            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accelerate"
                android:onClick="setAccelerate"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linear"
                android:onClick="setLinear"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anticipate"
                android:onClick="setAnticipate"
                />

            <Button
                android:layout_gravity="center"
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cycle"
                android:onClick="setCycle"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anticipate_overshoot"
                android:onClick="setAnticipateOvershoot"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:onClick="setPath"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overshoot"
                android:onClick="setOvershoot"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bounce"
                android:onClick="setBounce"
                />
            <Button
                style="@style/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:onClick="setCustomInterpolator"
                />
        </GridLayout>
<!--    </ScrollView>-->

</LinearLayout>
